# dwg2json

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT_PLAN.txt  Makefile  README.md
.github/workflows/: ci.yml  docs.yml  dwg_corpus.yml
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/architecture/: backends.md  overview.md  pipeline.md  schema-design.md
docs/guide/: cli.md  confidence.md  development.md  getting-started.md  installation.md  output-format.md  python-api.md  xref-policy.md
docs/reference/: configuration.md  json-schema.md  licenses.md
dwg2json/: DEVELOPMENT_PLAN.txt  LICENSE  LICENSES_THIRD_PARTY.md  README.md  pyproject.toml
dwg2json/docs/: ARCHITECTURE.md
dwg2json/examples/: basic_usage.py
dwg2json/examples/golden/: cycle_xref.json  missing_xref.json  nested_xrefs.json  resolved_xref.json  single_dwg.json
dwg2json/src/dwg2json/: __init__.py  api.py  cli.py  models.py
dwg2json/src/dwg2json/backends/: __init__.py  base.py  libredwg_backend.py  null_backend.py  registry.py
dwg2json/src/dwg2json/native/: bridge.py  capabilities.py
dwg2json/src/dwg2json/pipeline/: compose.py  confidence.py  export_json.py  publication.py  xref_paths.py  xrefs.py
dwg2json/src/dwg2json/schema/: __init__.py  dwg2json_v0.1.0.schema.json  dwg2json_v0.2.0.schema.json
dwg2json/tests/: conftest.py  test_api.py  test_cli.py  test_completeness.py  test_composition.py  test_confidence.py  test_geodata_sidecar.py  test_golden_json.py  test_json_export.py  test_layout_publication.py  test_libredwg_backend_env.py  test_models.py  test_null_backend.py  test_schema_validation.py  test_xref_binding.py  test_xref_cycles.py  test_xref_paths.py
dwg2json/tests/fixtures/: publication_minimal.dxf
dwg2json_pkg/: LICENSES_THIRD_PARTY.md  README.md  pyproject.toml
dwg2json_pkg/examples/: example-output.json
dwg2json_pkg/src/dwg2json/: __init__.py  backends.py  cli.py  models.py  parser.py  xref.py
dwg2json_pkg/tests/: test_smoke.py
scripts/: batch_parse_dwgs.py  fetch_libredwg_test_dwgs.py
